# yolov5-hdcn

./: README.md
tensorrt-hdcn/: CMakeLists.txt  deform_conv_cuda_kernel.cuh  trt_cuda_helper.cuh  trt_deform_conv.hpp  trt_plugin_helper.hpp
torch-hdcn/: train.py  yolov5s-hdcn.yaml
torch-hdcn/data/: coco_with_background.yaml  driver_mask.yaml
torch-hdcn/models/: common.py  yolo.py  yolov5s-dcn-v2.yaml  yolov5s-dcn.yaml  yolov5s-half-dcn-v2.yaml
torch-hdcn/utils/: loss.py
